# Product-Review-Forum

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: app.py
app/api/routes/: authRoutes.py  postRoutes.py
app/core/: config.py  exceptions.py  imagekit.py  logger.py  security.py
app/database/: db.py
app/models/: models.py
app/schemas/: auth_schemas.py  post_schemas.py
tests/: test_smoke.py
