[project]
name = "project-fastapi-photo-and-video-sharing-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.6.0",
    "pwdlib[bcrypt]>=0.3.0",
    "pyjwt>=2.13.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.49.0",
]
