[project]
name = "project-fastapi-photo-and-video-sharing-app"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.6.0",
    "pwdlib[bcrypt]>=0.3.0",
    "pyjwt>=2.13.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.api.routes.authRoutes",
    "app.api.routes.postRoutes",
    "app.app",
    "app.core.config",
    "app.core.exceptions",
    "app.models.models",
    "app.schemas.post_schemas",
    "streamlit_app",
]
ignore_errors = true
